// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PanelWithDetails /> PanelWithDetails - bottom controls 1`] = `
<div
  className="panel-show-details panel-show-details-bottom panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <h4
      className="panel-title"
      role="presentation"
    >
      <a
        aria-expanded={false}
        aria-selected={false}
        className="collapsed"
        onClick={[Function]}
      >
        Show details
      </a>
    </h4>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={true}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - custom labels 1`] = `
<div
  className="panel-show-details panel-show-details-top panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <h4
      className="panel-title"
      role="presentation"
    >
      <a
        aria-expanded={false}
        aria-selected={false}
        className="collapsed"
        onClick={[Function]}
      >
        Show
      </a>
    </h4>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={true}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - default 1`] = `
<div
  className="panel-show-details panel-show-details-top panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <h4
      className="panel-title"
      role="presentation"
    >
      <a
        aria-expanded={false}
        aria-selected={false}
        className="collapsed"
        onClick={[Function]}
      >
        Show details
      </a>
    </h4>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={true}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - default expanded 1`] = `
<div
  className="panel-show-details panel-show-details-top panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <h4
      className="panel-title"
      role="presentation"
    >
      <a
        aria-expanded={true}
        aria-selected={true}
        className={null}
        onClick={[Function]}
      >
        Hide details
      </a>
    </h4>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={false}
    className="panel-collapse collapse in"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - small preview 1`] = `
<div
  className="panel-show-details panel-show-details-top panel-preview panel-preview-small panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <h4
      className="panel-title"
      role="presentation"
    >
      <a
        aria-expanded={false}
        aria-selected={false}
        className="collapsed"
        onClick={[Function]}
      >
        Show details
      </a>
    </h4>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={true}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;
